# ChangeLog for x11-drivers/xf86-video-mga
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-mga/ChangeLog,v 1.59 2007/09/11 09:06:58 dberkholz Exp $

  11 Sep 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  xf86-video-mga-1.4.7.ebuild:
  (#191970) Require xorg-server 1.4, or compilation fails missing uint32_t
  definition.

*xf86-video-mga-1.4.7 (08 Sep 2007)

  08 Sep 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  +xf86-video-mga-1.4.7.ebuild:
  Bump for 7.3.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  xf86-video-mga-1.4.6.1.ebuild:
  Stable on sparc wrt #175465

  03 Jul 2007; Lars Weiler <pylon@gentoo.org> xf86-video-mga-1.4.6.1.ebuild:
  Stable on ppc; bug #175465.

  02 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  xf86-video-mga-1.4.6.1.ebuild:
  alpha stable wrt #175465

  21 Jun 2007; Raúl Porcel <armin76@gentoo.org>
  xf86-video-mga-1.4.2.ebuild:
  alpha stable wrt #154165, thanks to Tobias Klausmann for testing

  05 May 2007; Daniel Gryniewicz <dang@gentoo.org>
  xf86-video-mga-1.4.6.1.ebuild:
  Marked stable on amd64 for bug #175465

  29 Apr 2007; Andrej Kacian <ticho@gentoo.org>
  xf86-video-mga-1.4.6.1.ebuild:
  Stable on x86, bug #175465.

  25 Apr 2007; Raúl Porcel <armin76@gentoo.org>
  xf86-video-mga-1.4.6.1.ebuild:
  Stable on ia64 wrt bug #175465

  25 Apr 2007; Markus Rothe <corsair@gentoo.org>
  xf86-video-mga-1.4.6.1.ebuild:
  Stable on ppc64; bug #175465

  24 Jan 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  -xf86-video-mga-1.2.1.3.ebuild:
  Stop supporting Xorg 7.0.

*xf86-video-mga-1.4.6.1 (30 Dec 2006)

  30 Dec 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  -xf86-video-mga-1.4.6.ebuild, +xf86-video-mga-1.4.6.1.ebuild:
  Version bump for 7.2.  Build system fixes only.

*xf86-video-mga-1.4.6 (16 Dec 2006)

  16 Dec 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  -xf86-video-mga-1.4.5.ebuild, +xf86-video-mga-1.4.6.ebuild: