@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 1.4.1-fix_drilock.patch 3583 RMD160 fa145124c2eb35f7f4f1aa8d2f5f3e3c1ffe2268 SHA1 33bc837887ee5ed6975e8a613064785da65ca44c SHA256 b3098a2d97b7f3c48cc1110670738e6a1e783f649b56cb3519c1d759315e29c0
 MD5 6425baf8431bce1479632e97c429d550 files/1.4.1-fix_drilock.patch 3583
 RMD160 fa145124c2eb35f7f4f1aa8d2f5f3e3c1ffe2268 files/1.4.1-fix_drilock.patch 3583
@@ -13,6 +16,7 @@ DIST xf86-video-mga-1.4.1.tar.bz2 367973 RMD160 d283690c1c5daf27fecbed973628b7a5
 DIST xf86-video-mga-1.4.2.tar.bz2 365652 RMD160 7ca95f07dba532f533548b1972de6217bd78896f SHA1 c54e22fba89a8fa16617e6c75864581dcee25faf SHA256 652e0f08d3a7c5251dce581772b3af5b72a7ef11a9607508207435471d2d3dae
 DIST xf86-video-mga-1.4.6.1.tar.bz2 376624 RMD160 4699193c38c3a8349cef80661e108d422e366410 SHA1 8b9f619fc1baf711fcae38dbf4851d277a5cbc1a SHA256 a7ace8c088cc214122c5f9d85f5566b0790207c8f15b960a4fc673d1bdaffdfc
 DIST xf86-video-mga-1.4.7.tar.bz2 389212 RMD160 6b4be9663e8fae9bb992a61d10a9bbdd19cbda84 SHA1 63211f9f577b18a350e2d2b574f6be9ba98cce95 SHA256 a1c3a91f3d5f17ffc21fdb5ed3c1bcc953ab6602fbfaae2954ae7bd5e9ee5952
+DIST xf86-video-mga-1.9.100.tar.bz2 369119 RMD160 8965739aef3948241c83309c5cc57cc2945aea0a SHA1 141ad0a42f5e6c142e83c7bbea18724b72567893 SHA256 e8efee8d5269eb29f9bd499db3d47a6a4d3c320d4b0a24874cdf7b598ad77a5c
 EBUILD xf86-video-mga-1.4.1-r1.ebuild 921 RMD160 bead3f7aaa3bd71349b72e356ae9bb187928aa4b SHA1 0c849a87280d64ec28b2a87220f31ff26796fb28 SHA256 19db0e44120eef46fe9fc4ca04e8071cb0b657b9235243d5420d9ff06bea1aed
 MD5 943f60b18cade77ad1130197d764d6c4 xf86-video-mga-1.4.1-r1.ebuild 921
 RMD160 bead3f7aaa3bd71349b72e356ae9bb187928aa4b xf86-video-mga-1.4.1-r1.ebuild 921
@@ -33,10 +37,14 @@ EBUILD xf86-video-mga-1.4.7.ebuild 885 RMD160 27ee000546f77b711c1b27e66a318ee11a
 MD5 33d095a3d1c56bf419232944cc7bdbe7 xf86-video-mga-1.4.7.ebuild 885
 RMD160 27ee000546f77b711c1b27e66a318ee11a9d41f8 xf86-video-mga-1.4.7.ebuild 885
 SHA256 283dfae85d2f3a2170354cd3dd51365dfa48ce3be9b77da18dcad192c6b50715 xf86-video-mga-1.4.7.ebuild 885
-MISC ChangeLog 8649 RMD160 c98efde342dfc8c2b57d3c0712c7a134b5adcc37 SHA1 39554bc7ae417a00289e55e38d813a462435f669 SHA256 9ea17cef5753b8de63b685c5164f552994a3e694fae6739cef2aaaea173cae5f
-MD5 bea2afe5400e7ca298254c0b722bc266 ChangeLog 8649
-RMD160 c98efde342dfc8c2b57d3c0712c7a134b5adcc37 ChangeLog 8649
-SHA256 9ea17cef5753b8de63b685c5164f552994a3e694fae6739cef2aaaea173cae5f ChangeLog 8649
+EBUILD xf86-video-mga-1.9.100.ebuild 825 RMD160 a66835d7d176d887640224c258736422a3e32504 SHA1 91a9c28fd636ffe6c6fbba7fb36c4a2e892c9641 SHA256 c49b97d94b2aea40c85c7b6d6c5076d469fb19a2c2e79a2276339b156049adaf
+MD5 d2f89263e37832f47464601ef4dc65f5 xf86-video-mga-1.9.100.ebuild 825
+RMD160 a66835d7d176d887640224c258736422a3e32504 xf86-video-mga-1.9.100.ebuild 825
+SHA256 c49b97d94b2aea40c85c7b6d6c5076d469fb19a2c2e79a2276339b156049adaf xf86-video-mga-1.9.100.ebuild 825
+MISC ChangeLog 8906 RMD160 91530ad48a88cf91b1f718e8ffce91e899fbb414 SHA1 d6cb37737169fe103ec49c075b2c37df0c730b0e SHA256 7b8726163d69d2d7f2a15f62d7d98caff5ab42163894d28fd76ed9c7bae82606
+MD5 5fde33ae6e7c1072664e6b8a77648b64 ChangeLog 8906
+RMD160 91530ad48a88cf91b1f718e8ffce91e899fbb414 ChangeLog 8906
+SHA256 7b8726163d69d2d7f2a15f62d7d98caff5ab42163894d28fd76ed9c7bae82606 ChangeLog 8906
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
 MD5 a37bab73e2f24b213932c30997d3d360 metadata.xml 156
 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 metadata.xml 156
@@ -56,3 +64,13 @@ SHA256 083c6b17cd4a2e57cef1cc1e63e6e5c157425182a9be88d7c5cffffcbb01cbdf files/di
 MD5 d6c89dc1f408340dd15fc76f28918cf3 files/digest-xf86-video-mga-1.4.7 521
 RMD160 b8c8278b6d8277c77766ec728f77813a41c1a7b5 files/digest-xf86-video-mga-1.4.7 521
 SHA256 f01175cedba71235a4584c373c1dc531c29997355e3d64182995838e810cd640 files/digest-xf86-video-mga-1.4.7 521
+MD5 6194463e699c50f859e1f1fd384fbda3 files/digest-xf86-video-mga-1.9.100 527
+RMD160 d4245344241d3d0bb475e324a64f28ebfbfe0972 files/digest-xf86-video-mga-1.9.100 527
+SHA256 7dddee871d8fbe1aa568d106ca3a6ddb77abdeb45afede34ddd79e3d35e15c4a files/digest-xf86-video-mga-1.9.100 527
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHMYExXVaO67S1rtsRApnwAKC0RxmRwHJp+RySePm0Iu61GPXQHwCeOReC
+rOSJlkmvUbM62+Bt+uLytoQ=
+=eEfT
+-----END PGP SIGNATURE-----
