@@ -1,0 +1,6 @@
+MD5 56566e8c3fb4bb99791d1788d0a9a1a8 x11-driver-patches-4.tar.bz2 346
+RMD160 fcbd405de080d07612d46f455b927035fd8123a8 x11-driver-patches-4.tar.bz2 346
+SHA256 07069bbd072f2def50e83801a8f2a41a4c96495104f15cd6f56f7df7f89769bf x11-driver-patches-4.tar.bz2 346
+MD5 3e80cfb84b62866d2f94774ecbf3e46c xf86-video-mga-1.9.100.tar.bz2 369119
+RMD160 8965739aef3948241c83309c5cc57cc2945aea0a xf86-video-mga-1.9.100.tar.bz2 369119
+SHA256 e8efee8d5269eb29f9bd499db3d47a6a4d3c320d4b0a24874cdf7b598ad77a5c xf86-video-mga-1.9.100.tar.bz2 369119
